# cg

./: .gitignore  README.md
uebung1/: a.out
uebung1/Aufgabe1/: Aufgabe1.cpp  Aufgabe1.vcxproj  Aufgabe1.vcxproj.filters
uebung1/Aufgabe2/: Aufgabe2.cpp  Aufgabe2.vcxproj  Aufgabe2.vcxproj.filters  LineStrip3D.cpp  LineStrip3D.hpp  Point3D.hpp  Point3D.hpp.gch
uebung1/Aufgabe3/: Aufgabe3.cpp  Aufgabe3.vcxproj  Aufgabe3.vcxproj.filters  MatrixInt.cpp  MatrixInt.hpp  matrix2.txt
uebung10/Skeleton/: SSAO.sln
uebung10/Skeleton/SSAO/: SSAO.vcxproj  SSAO.vcxproj.filters
uebung11/: CG_blatt11.tex
uebung11/Skeleton/: ShadowMapping.sln
uebung11/Skeleton/ShadowMapping/: ShadowMapping.vcxproj  ShadowMapping.vcxproj.filters
uebung12/: CG_blatt12.tex
uebung12/Skeleton/: MipMapping.sln
uebung12/Skeleton/MipMapping/: MipMapping.vcxproj  (+1 more)
uebung2/: CT Abgabe2.tex
uebung4/Skelett/: Aufgabenblatt04.sln
uebung5/: Aufgabe 1.docx
uebung5/Aufgabenblatt05/: Aufgabenblatt05.sln  Aufgabenblatt05.vcxproj  Aufgabenblatt05.vcxproj.filters  CMakeLists.txt  main.cpp  result.ppm  sceneobject.cpp  sceneobject.h  util.h
uebung5/Aufgabenblatt05/test/: reference_rayGeneration.ppm  reference_sphereIntersection.ppm
uebung6/: CG Abgabe6.tex
uebung6/Aufgabenblatt06/: Aufgabenblatt06.sln  Aufgabenblatt06.vcxproj  Aufgabenblatt06.vcxproj.filters  CMakeLists.txt  main.cpp  pointlight.h  result.ppm  sceneobject.cpp  sceneobject.h  util.h
uebung7/: CG_blatt7.tex
uebung8/: schriftlich.docx
uebung8/Skeleton/: HelloGL.sln
uebung9/Skeleton/: Geometrie.sln
(+171 files in other folders)
